fix: login z-index

--- a/src/components/view/authorization/authorization.scss
+++ b/src/components/view/authorization/authorization.scss
@@ -1,4 +1,5 @@
 .authorization-wrapper {
+  z-index: 3;
   background-color: rgba(0, 0, 0, 0.5);
   position:fixed;
   left:0;
@@ -54,7 +55,7 @@
         margin: 5px;
         padding: 10px;
         border: none;
-        outline: none;  
+        outline: none;
       }
 
       .authorization-input:placeholder-shown {
@@ -73,10 +74,10 @@
         border-radius: 2px;
         margin: 5px;
         padding: 10px;
-        
+
         p {
           font-size: 1rem;
-          
+
           color: black;
         }
       }
@@ -124,7 +125,7 @@
 
 
 
- 
+
 
 
 
